Change to stop img stretch

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body,html{
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
+  background-color: #f7f7f7;
 }
 
 .album {
@@ -85,6 +86,13 @@ body,html{
   grid-gap: 10px;
   z-index: 0;
 }
+
+.modalImg{
+  position: relative;
+  width: auto;
+  height: auto;
+}
+
 #contactBody{
   display: flex;
 }
